# b3d2glb

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
.opencode/agents/: b3d2glb.md
.opencode/skills/b3d-conversion/: SKILL.md
src/: b3d.rs  b3d_parser.rs  cli.rs  lib.rs  main.rs  math.rs  texture.rs  writer.rs
src/b3d_parser/: utils.rs
tests/: e2e.rs
tests/ideal/: arrow.glb  monkey.glb
