[package]
name = "b3d2glb"
version = "0.2.0"
edition = "2024"
description = "Convert Blitz3D B3D models to glTF/GLB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AvengerAnubis/b3d2glb"
homepage = "https://github.com/AvengerAnubis/b3d2glb"

[dependencies]
b3d = { path = "vendor/b3d/b3d", version = "0.1.9" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
walkdir = "2"
